--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ body {
   -ms-grid-columns: (minmax(13rem, 1fr))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(13rem, 1fr));
   margin-top: 5rem;
-  grid-auto-rows: minmax(20rem, 60vh);
+  grid-auto-rows: 20rem;
   gap: 2.5vw;
 }
 
