--- a/css/style.scss
+++ b/css/style.scss
@@ -136,7 +136,7 @@ body {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(13rem,1fr));
     margin-top: 5rem;
-    grid-auto-rows: minmax(20rem,60vh);
+    grid-auto-rows: 20rem;
     gap: 2.5vw;
 }
 
