--- a/css/style.scss
+++ b/css/style.scss
@@ -362,6 +362,10 @@ body {
     .hero-text {
         font-size: 2rem;
     }
+
+    .interactive-image {
+        min-height: 14rem;
+    }
     .grid-items {
         padding-left: 1em;
         padding-right: 10em;
