--- a/css/style.scss
+++ b/css/style.scss
@@ -215,6 +215,13 @@ body {
     padding:0.5em 1em;
 }
 
+.black-background:hover {
+    background-color: var(--Black);
+    color: white;
+    cursor: pointer;
+}
+
+
 .footer {
     display: flex;
     justify-content: space-between;
@@ -373,6 +380,7 @@ body {
 @media screen and (max-width: 390px) {
     .hero-text {
         font-size: 2rem;
+        min-width: 15rem;
     }
 
     .interactive-image {
