--- a/css/style.scss
+++ b/css/style.scss
@@ -66,7 +66,12 @@ body {
 #hamburger-menu {
     display: none;
 }
-
+#hidden-logo {
+    display: none;
+}
+#close-button {
+    display: none;
+}
 .interactive-section {
     display: flex;
     position: relative;
@@ -304,11 +309,45 @@ body {
     :root {
         --body-padding: 3em 1.5em;
     }
-    .nav-links {
+    .header {
+        position: relative;
+    }
+    .nav-links-container {
         display: none;
+        position: fixed;
+        height: 100vh;
+        width: 100vw;
+        background-color: black;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        flex-direction: column;
+        row-gap: 2rem;
+        justify-content: center;
+        z-index: 100;
+        font-family: var(--josefin-sans-font);
+    }
+    .nav-links {
+        text-transform: uppercase;
+        font-size: 1.5rem;
+    }
+    #hidden-logo {
+        display: block;
+        position: absolute;
+        left: 1.5em;
+        top: 3rem;
+        width: 9rem;
     }
     #hamburger-menu {
         display: block;
+    }
+    #close-button {
+        display: block;
+        position: absolute;
+        top: 3em;
+        right: 1.5em;
+        width: 2.5rem;
     }
     .footer {
         flex-wrap: wrap;
@@ -378,6 +417,14 @@ body {
 
 
 @media screen and (max-width: 390px) {
+    .nav-links-container {
+        display: none;
+        align-items: flex-start;
+        padding-left: 1rem;
+    }
+
+
+    
     .hero-text {
         font-size: 2rem;
         min-width: 15rem;
