--- a/css/style.scss
+++ b/css/style.scss
@@ -8,7 +8,7 @@
     --Black: hsl(0, 0%, 0%);
     --Dark-Gray: hsl(0, 0%, 55%);
     --Very-Dark-Gray: hsl(0, 0%, 41%);
-    --body-padding: 4em 7em;
+    --body-padding: 4em 4em;
     --alata-font: 'Alata', sans-serif;
     --josefin-sans-font: 'Josefin Sans', sans-serif;
 }
@@ -85,7 +85,7 @@ body {
 
 .interactive-image {
     width: 60%;
-    min-height: 30rem;
+    min-height: 25rem;
     background-image: url(../images/desktop/image-interactive.jpg);
     background-size: 100% 100%;
 }
@@ -139,10 +139,10 @@ body {
 
 .creation-section-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(13rem,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(10rem,1fr));
     margin-top: 5rem;
     grid-auto-rows: 20rem;
-    gap: 2.5vw;
+    gap: 2vw;
 }
 
 .grid-items {
@@ -150,7 +150,7 @@ body {
     background-repeat: no-repeat;
     color: var(--White);
     text-transform: uppercase;
-    padding: 1em 2em;
+    padding: 1em 1em;
     font-size: 1.5rem;
     position: relative;
     display: flex;
@@ -313,11 +313,11 @@ body {
         position: relative;
     }
     .nav-links-container {
-        display: none;
+        display: flex;
         position: fixed;
         height: 100vh;
         width: 100vw;
-        background-color: black;
+        background-color: var(--Black);
         top: 0;
         left: 0;
         right: 0;
@@ -325,8 +325,10 @@ body {
         flex-direction: column;
         row-gap: 2rem;
         justify-content: center;
-        z-index: 100;
+        z-index: -100;
         font-family: var(--josefin-sans-font);
+        opacity: 1;
+        transition: opacity .5s ease-out;
     }
     .nav-links {
         text-transform: uppercase;
@@ -418,7 +420,7 @@ body {
 
 @media screen and (max-width: 390px) {
     .nav-links-container {
-        display: none;
+        display: flex;
         align-items: flex-start;
         padding-left: 1rem;
     }
