--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@
 
 body {
   font-family: var(--alata-font);
+  background-color: white;
 }
 
 .header {
@@ -26,7 +27,7 @@ body {
   background-size: 100% 100%;
   background-repeat: no-repeat;
   min-height: 38rem;
-  height: clamp(38rem, 100vh, 40rem);
+  height: clamp(39.5rem, 100vh, 40rem);
   padding: var(--body-padding);
 }
 
@@ -381,9 +382,7 @@ body {
     position: relative;
   }
   .nav-links-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    display: none;
     position: fixed;
     height: 100vh;
     width: 100vw;
@@ -400,11 +399,7 @@ body {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    z-index: -100;
     font-family: var(--josefin-sans-font);
-    opacity: 1;
-    -webkit-transition: opacity .5s ease-out;
-    transition: opacity .5s ease-out;
   }
   .nav-links {
     text-transform: uppercase;
@@ -507,9 +502,6 @@ body {
 
 @media screen and (max-width: 390px) {
   .nav-links-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
