--- a/css/style.css
+++ b/css/style.css
@@ -382,7 +382,9 @@ body {
     position: relative;
   }
   .nav-links-container {
-    display: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     position: fixed;
     height: 100vh;
     width: 100vw;
@@ -401,6 +403,14 @@ body {
             justify-content: center;
     font-family: var(--josefin-sans-font);
     z-index: 100;
+    visibility: hidden;
+    opacity: 0;
+    -webkit-transition-property: opacity, visibility;
+    transition-property: opacity, visibility;
+    -webkit-transition-duration: .5s;
+            transition-duration: .5s;
+    -webkit-transition-timing-function: linear;
+            transition-timing-function: linear;
   }
   .nav-links {
     text-transform: uppercase;
