--- a/css/style.scss
+++ b/css/style.scss
@@ -315,7 +315,7 @@ body {
         position: relative;
     }
     .nav-links-container {
-        display: none;
+        display: flex;
         position: fixed;
         height: 100vh;
         width: 100vw;
@@ -329,6 +329,11 @@ body {
         justify-content: center;
         font-family: var(--josefin-sans-font);
         z-index: 100;
+        visibility: hidden;
+        opacity: 0;
+        transition-property: opacity, visibility;
+        transition-duration: .5s;
+        transition-timing-function: linear;
     }
     .nav-links {
         text-transform: uppercase;
